fix table overlap

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -246,16 +246,6 @@ header#masthead {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-table {
-    margin: 0 auto;
-    width: 100%;
-    clear: both;
-    border-collapse: collapse;
-    table-layout: fixed;
-    word-wrap:break-word; 
-      
-}
-
 .styled-table th,
 .styled-table td {
     padding: 5px 5px;
